Comment arrow overlapping the progress bar fixed

--- a/client/stylesheets/sass/partials/_videobox.scss
+++ b/client/stylesheets/sass/partials/_videobox.scss
@@ -57,11 +57,12 @@
       background: rgba(0, 0, 0, .5);
       border-radius: 0;
       cursor: pointer;
+      z-index: 1;
 
       .progress-bar {
         background: #3aaf84;
         position: relative;
-        z-index: 1;
+        z-index: 2;
         width: 100%;
 
         .controller {
@@ -97,7 +98,8 @@
   .comment-popup {
     width: 50px;
     height: 50px;
-    background-color: #fff;
+    color: #fff;
+    background-color: #000;
     position: absolute;
     bottom: 25px;
     display: none;
@@ -294,20 +296,22 @@
         margin-top: 50px;
         margin-left: 45px;
         margin-right: 20px;
+        position: relative;
       }
 
       .arrow {
-        height: 50px;
-        width: 50px;
+
+        bottom: 15px; 
+        margin-bottom: -77px;
+        left: 97px;
         position: absolute;
-        @include rotate(-90deg);
-        color: rgba(0, 0, 0, .7);
-        bottom: -77px; 
-        left: 100px;
-        z-index: 0;
 
         &:before {
           font-size: 80px;
+          bottom: -12px;
+          position: absolute;
+          @include rotate(-90deg);
+          color: rgba(0, 0, 0, .7);
         }
       }
     }
